# apps/api/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Auth\AuthController;
+use App\Http\Controllers\Intake\IntakeController;
 use App\Http\Controllers\Medication\MedicationController;
 use App\Http\Controllers\Schedule\ScheduleController;
 use App\Http\Controllers\User\UserProfileController;
@@ -35,4 +36,9 @@ Route::middleware('auth:sanctum')->prefix('schedules')->group(function () {
     Route::get('/{schedule}', [ScheduleController::class, 'show']);
     Route::put('/{schedule}', [ScheduleController::class, 'update']);
     Route::delete('/{schedule}', [ScheduleController::class, 'destroy']);
+});
+
+Route::middleware('auth:sanctum')->prefix('intakes')->group(function () {
+    Route::get('/', [IntakeController::class, 'index']);
+    Route::post('/', [IntakeController::class, 'store']);
 });
